# frankengraphdb

./: .gitignore  AGENTS.md  COMPREHENSIVE_PLAN_FOR_THE_DESIGN_OF_FRANKENGRAPHDB.md  COMPREHENSIVE_PLAN_FOR_THE_DESIGN_OF_FRANKENGRAPHDB__FABLE.md  COMPREHENSIVE_PLAN_FOR_THE_DESIGN_OF_FRANKENGRAPHDB__SOL.md  Cargo.toml  README.md  rust-toolchain.toml
.beads/: config.yaml
crates/fgdb-bigint/: Cargo.toml
crates/fgdb-bigint/examples/: deterministic_transcript.rs
crates/fgdb-bigint/src/: lib.rs
crates/fgdb-calibrate/: Cargo.toml
crates/fgdb-calibrate/src/: ann_recall.rs  conformal.rs  eprocess.rs  exploration.rs  lib.rs  log.rs  lyapunov.rs  no_regret.rs  ope.rs  policy_epoch.rs  progress.rs  regime.rs
crates/fgdb-calibrate/tests/: sextant_e2e.rs
crates/fgdb-codec/: Cargo.toml
crates/fgdb-collections/: Cargo.toml
crates/fgdb-delta-types/: Cargo.toml
crates/fgdb-evidence/: Cargo.toml
crates/fgdb-evidence/src/: lib.rs
crates/fgdb-resource/: Cargo.toml
crates/fgdb-resource/src/: lib.rs
crates/fgdb-types/: Cargo.toml
docs/: ARCHITECTURE_DECISION_RECORD.md
registries/: appendix_a_catalog.toml  architecture_decisions.toml  bootstrap_frames.toml  checker_index.toml  claims_lint.toml  constitution.toml  durable_fields.toml  evidence.toml  invariants.toml  logical_object_kinds.toml  physical_record_kinds.toml  prebootstrap_artifact_kinds.toml  proof_lanes.toml  sample_capability_manifest.toml  slo.toml  wire_types.toml
scripts/: check.sh  g0_architecture_decisions_e2e.sh  g0_claims_e2e.sh  g0_identity_e2e.sh  w1_codec_pipeline_scalar_e2e.sh  w1_codec_scalar_e2e.sh  w1_foundation_types_e2e.sh
tools/registry-check/: Cargo.toml
tools/registry-check/src/: appendix_a.rs  appendix_source.rs  architecture.rs  closure.rs  hash.rs  identity.rs  jsonl.rs  lib.rs  lint.rs  main.rs  model.rs  predicate.rs  toml.rs  validate.rs
tools/registry-check/tests/: architecture_decisions.rs  claims.rs  identity.rs
(+33 files in other folders)
