[package]
name = "fgdb-resource"
version = "0.0.1"
edition = "2024"
description = "Typed resource vectors and ceilings: checked, axis-explicit accounting consumed later by permits, FrameLimits, and W10 admission control (bead fgdb-w1-foundation-types-tjk)."
publish = false

[lints]
workspace = true
